[gd_scene load_steps=9 format=3 uid="uid://do0hfg6d6dkhd"]

[ext_resource type="Script" path="res://Scripts/SkopKeeper.gd" id="1_04evw"]
[ext_resource type="Texture2D" uid="uid://4oei17yroj0t" path="res://Assets/NPC/NPC's.png" id="1_doea8"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://Assets/Font/Schr√∂dinger.ttf" id="3_echkc"]
[ext_resource type="Texture2D" uid="uid://b6wahuhdh6mbg" path="res://Assets/Icons/shard_01i.png" id="4_m8po0"]
[ext_resource type="Texture2D" uid="uid://dkxeo1rfa7mgm" path="res://Assets/Icons/potion_03c.png" id="5_e5d0v"]
[ext_resource type="Texture2D" uid="uid://beltwhfoshjp" path="res://Assets/Icons/potion_03b.png" id="6_jp7d2"]
[ext_resource type="Texture2D" uid="uid://d3sy8jjav3k31" path="res://Assets/Icons/coin_03d.png" id="7_8l5qu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4u6t5"]
size = Vector2(27, 22)

[node name="ShopKeeper" type="Node2D"]
process_mode = 3
script = ExtResource("1_04evw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_doea8")
hframes = 3
vframes = 3
frame = 3

[node name="ShopMenu" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="ShopMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.345098, 0.0980392, 0.160784, 1)

[node name="Label" type="Label" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 10.0
offset_right = 24.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.164706, 0.0313726, 0.0627451, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 20
text = "SHOP"

[node name="Ammo" type="ColorRect" parent="ShopMenu/ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 60.0
offset_right = 157.0
offset_bottom = 85.0
color = Color(0.247059, 0.0588235, 0.105882, 1)

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect/Ammo"]
position = Vector2(15, 12)
texture = ExtResource("4_m8po0")

[node name="Label" type="Label" parent="ShopMenu/ColorRect/Ammo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.5
offset_right = 38.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.94902, 0.65098, 0.698039, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "AMMO X 3 ($10)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PurchaseAmmo" type="Button" parent="ShopMenu/ColorRect/Ammo"]
layout_mode = 0
offset_left = 120.0
offset_top = 3.5
offset_right = 146.0
offset_bottom = 21.5
theme_override_colors/font_color = Color(0.466667, 0.145098, 0.227451, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "BUY"

[node name="Health" type="ColorRect" parent="ShopMenu/ColorRect"]
layout_mode = 0
offset_left = 165.0
offset_top = 60.0
offset_right = 315.0
offset_bottom = 85.0
color = Color(0.247059, 0.0588235, 0.105882, 1)

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect/Health"]
position = Vector2(15, 12)
texture = ExtResource("5_e5d0v")

[node name="Label" type="Label" parent="ShopMenu/ColorRect/Health"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.5
offset_right = 39.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.94902, 0.65098, 0.698039, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "HEALTH X 1 ($5)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PurchaseHealth" type="Button" parent="ShopMenu/ColorRect/Health"]
layout_mode = 0
offset_left = 120.0
offset_top = 3.5
offset_right = 146.0
offset_bottom = 21.5
theme_override_colors/font_color = Color(0.466667, 0.145098, 0.227451, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "BUY"

[node name="Stamina" type="ColorRect" parent="ShopMenu/ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 95.0
offset_right = 157.0
offset_bottom = 120.0
color = Color(0.247059, 0.0588235, 0.105882, 1)

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect/Stamina"]
position = Vector2(15, 12)
texture = ExtResource("6_jp7d2")

[node name="Label" type="Label" parent="ShopMenu/ColorRect/Stamina"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.5
offset_right = 42.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.94902, 0.65098, 0.698039, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "STAMINA X 1 ($2)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PurchaseStamina" type="Button" parent="ShopMenu/ColorRect/Stamina"]
layout_mode = 0
offset_left = 120.0
offset_top = 3.5
offset_right = 146.0
offset_bottom = 21.5
theme_override_colors/font_color = Color(0.466667, 0.145098, 0.227451, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "BUY"

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect"]
position = Vector2(10, 168)
texture = ExtResource("7_8l5qu")

[node name="CoinAmount" type="Label" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -23.0
offset_right = 60.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.164706, 0.0313726, 0.0627451, 1)
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "COINS: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_echkc")
theme_override_font_sizes/font_size = 10
text = "x"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 27)
shape = SubResource("RectangleShape2D_4u6t5")

[connection signal="pressed" from="ShopMenu/ColorRect/Ammo/PurchaseAmmo" to="." method="_on_purchase_ammo_pressed"]
[connection signal="pressed" from="ShopMenu/ColorRect/Health/PurchaseHealth" to="." method="_on_purchase_health_pressed"]
[connection signal="pressed" from="ShopMenu/ColorRect/Stamina/PurchaseStamina" to="." method="_on_purchase_stamina_pressed"]
[connection signal="pressed" from="ShopMenu/ColorRect/Close" to="." method="_on_close_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
